# driscord

./:  config.json  .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  PLAN.md  README.md  driscord.json
client/: CMakeLists.txt  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client-qt/: CMakeLists.txt
client-qt/qml/: Main.qml
client-qt/qml/components/: AvatarBox.qml  ContentPanel.qml  IconBox.qml  IconButton.qml  ServerColumn.qml  Sidebar.qml  VideoTile.qml
client-qt/qml/dialogs/: AvatarCropDialog.qml  CreateChannelDialog.qml  CreateServerDialog.qml  JoinByInviteDialog.qml  SettingsDialog.qml  ShareDialog.qml  VoiceStatsDialog.qml
client-qt/qml/screens/: LoginScreen.qml  MainScreen.qml
client-qt/resources/icons/: LICENSE-LUCIDE.txt
client-qt/src/: main.cpp
client-qt/src/api/: ApiClient.cpp  ApiClient.h  AudioSettingsStore.cpp  AudioSettingsStore.h  AuthManager.cpp  AuthManager.h  ServerRepository.cpp  ServerRepository.h  SessionStore.cpp  SessionStore.h  UserRepository.cpp  UserRepository.h
client-qt/src/app/: AppConfig.cpp  AppConfig.h  AppState.cpp  AppState.h  AvatarTintProvider.cpp  AvatarTintProvider.h  DriscordBridge.cpp  DriscordBridge.h  FrameProvider.cpp  FrameProvider.h  ThumbnailProvider.cpp  ThumbnailProvider.h
client/bindings/c_api/: CMakeLists.txt  driscord.cpp  driscord.h
client/bindings/kotlin/: native.cpp
client/capi/: driscord_capi.cpp  driscord_capi.h
client/jni/: audio_jni.cpp  audio_jni.hpp  audio_mixer_jni.cpp  audio_receiver_jni.cpp  audio_receiver_jni.hpp  audio_sender_jni.cpp  audio_sender_jni.hpp  audio_transport_jni.cpp  audio_transport_jni.hpp  driscord_jni.cpp  driscord_jni_audio.cpp  driscord_jni_capture.cpp  driscord_jni_screen.cpp  driscord_jni_transport.cpp  driscord_jni_video.cpp  driscord_state.cpp  driscord_state.hpp  jni_common.hpp  screen_capture_jni.cpp  screen_session_jni.cpp  screen_session_jni.hpp  transport_jni.cpp  transport_jni.hpp  video_transport_jni.cpp  video_transport_jni.hpp
client/src/: app.cpp  app.hpp  audio_engine.cpp  audio_engine.hpp  audio_transport.cpp  audio_transport.hpp  config.cpp  config.hpp  driscord_core.cpp  driscord_core.hpp  main.cpp  main.ts  ring_buffer.hpp  screen_receiver.cpp  screen_receiver.hpp  screen_sender.cpp  screen_sender.hpp  stream_defs.hpp  stream_jitter.hpp  transport.cpp  transport.hpp  ui.cpp  ui.hpp  video_renderer.cpp  video_renderer.hpp  video_transport.cpp  video_transport.hpp  voice_transport.cpp  voice_transport.hpp
client/src/audio/: audio.cpp  audio.hpp  audio_engine.cpp  audio_engine.hpp  audio_jitter.hpp  audio_mixer.cpp  audio_mixer.hpp  audio_receiver.cpp  audio_receiver.hpp  audio_sender.cpp  audio_sender.hpp  system_audio_capture.hpp  system_audio_capture_linux.cpp  system_audio_capture_mac.mm  system_audio_capture_win.cpp
client/src/audio/capture/: system_audio_capture.hpp  system_audio_capture_linux.cpp  system_audio_capture_mac.mm  system_audio_capture_win.cpp
client/src/utils/: byte_utils.hpp  jitter.hpp  ma_device.cpp  ma_device.hpp  opus_codec.cpp  opus_codec.hpp  protocol.hpp  ring_buffer.hpp  slot_ring.hpp  spinlock.hpp  time.hpp  vector_view.hpp  video_codec.cpp  video_codec.hpp
client/src/video/: screen.cpp  screen.hpp  screen_capture.hpp  screen_capture_common.hpp  screen_capture_ffmpeg.cpp  screen_capture_linux.cpp  screen_capture_mac.cpp  screen_capture_win.cpp  screen_capture_x11.cpp  screen_receiver.cpp  screen_receiver.hpp  screen_sender.cpp  screen_sender.hpp  screen_session.cpp  screen_session.hpp  stream_jitter.hpp  video.cpp  video.hpp  video_codec.cpp  video_codec.hpp  video_jitter.hpp  video_receiver.cpp  video_receiver.hpp  video_sender.cpp  video_sender.hpp
client/src/video/capture/: screen_capture.hpp  screen_capture_linux.cpp  screen_capture_mac.cpp  screen_capture_win.cpp
core/: CMakeLists.txt
core/benchmarks/: CMakeLists.txt  bench_jitter.cpp  bench_net_conditions.cpp  bench_protocol.cpp  jitter_bench.cpp  protocol_bench.cpp  video_codec_bench.cpp
core/jni/: driscord_jni_audio.cpp  driscord_jni_capture.cpp  driscord_jni_screen.cpp  driscord_jni_transport.cpp  driscord_jni_video.cpp  driscord_jni_vulkan.cpp  driscord_jni_vulkan.hpp  driscord_state.cpp  jni_common.hpp
core/shaders/: quad.frag  quad.vert  spv_to_header.cmake
core/src/: audio_transport.cpp  audio_transport.hpp  channel_labels.hpp  config.hpp  driscord_core.cpp  driscord_core.hpp  transport.cpp  transport.hpp  video_transport.cpp  video_transport.hpp
core/src/audio/: audio.cpp  audio.hpp  audio_mixer.cpp  audio_mixer.hpp  opus_codec.cpp  opus_codec.hpp  rnnoise_denoiser.cpp  rnnoise_denoiser.hpp  vad_gate.cpp  vad_gate.hpp
core/src/audio/capture/: system_audio_capture.hpp  (+3 more)
core/src/utils/: byte_utils.hpp  chunk_assembler.hpp  clock_skew.hpp  enum_strings.cpp  enum_strings.hpp  expected.hpp  jitter.hpp  log.hpp  ma_device.cpp  ma_device.hpp  metrics.hpp  opus_codec.cpp  opus_codec.hpp  protocol.hpp  slot_ring.hpp  spinlock.hpp  time.hpp  vector_view.hpp  video_codec.cpp
core/src/video/: frame_slot.hpp  screen.cpp  screen.hpp  screen_session.cpp  screen_session.hpp  video.cpp  video.hpp  video_codec.cpp  video_codec.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp  vulkan_texture.cpp  vulkan_texture.hpp
core/tests/: CMakeLists.txt  test_chunk_assembler.cpp  test_datachannel_transport.cpp  test_jitter.cpp  test_protocol.cpp  test_slot_ring.cpp  test_spinlock.cpp  test_vector_view.cpp
core/tests/integration/: test_datachannel_transport.cpp  test_net_conditions.cpp  test_room_isolation.cpp
core/tests/support/: net_cond.hpp  signaling_test_fixture.hpp  transport_harness.hpp  wait_helpers.hpp
core/tests/unit/: test_audio_receiver.cpp  test_byte_utils.cpp  test_expected.cpp  test_jitter.cpp  test_protocol.cpp  test_slot_ring.cpp  test_spinlock.cpp  test_video_codec.cpp  test_video_receiver.cpp
server/: CMakeLists.txt
server/src/: main.cpp  ws_server.cpp  ws_server.hpp
tests/: CMakeLists.txt  bench_protocol.cpp  test_byte_utils.cpp  test_chunk_assembler.cpp  test_jitter.cpp  test_vector_view.cpp
(+159 files in other folders)
